<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Restaurant Reservation System</string>
    <string name="hello">Select an Option</string>
    <string name="reserve_label">Reserve a Table</string>
	<string name="cancel_label">Cancel a Reservation</string>
	<string name="admin_label">Log in as Administrator</string>
	<string name="login_label">Enter name:</string>
	<string name="password_label">Enter password:</string>
	<string name="submit_label">Submit</string>
	<string name="back_label">Back</string>
	<string name="result_label"></string>
	<string name="restaurants_label">Manage Restaurants</string>
	<string name="reservations_label">Manage Reservations</string>
	<string name="home_label">Home</string>
	<string name="addrestaurants_label">Add a Restaurant</string>
	<string name="deleterestaurants_label">Delete a Restaurant</string>
	<string name="restaurantName_label">Enter name of restaurant</string>
	<string name="reservationTime_label">Enter time of reservation</string>
	<string name="customerName_label">Enter your name</string>
	<string name="customerPhoneNumber_label">Enter your phone number</string>
	<string name="restaurantAddress_label">Enter restaurant address</string>
	<string name="restaurantCapacity_label">Enter restaurant capacity</string>
	<string name="restaurantOpen_label">Enter opening time</string>
	<string name="restaurantClose_label">Enter closing time</string>
	<string name="adminpanel_label">Back to Admin Panel</string>
	<string name="success_label">Success</string>
	

</resources>