<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hello"
        android:textSize="20.5sp" />
    <Button
       android:id="@+id/reserve_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/reserve_label" />
    <Button
       android:id="@+id/cancel_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/cancel_label" />
    <Button
       android:id="@+id/admin_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/admin_label" />
</LinearLayout>