<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >
    <TextView  
       android:id="@+id/result_textview"
       android:layout_width="wrap_content" 
       android:layout_height="wrap_content" 
       android:layout_gravity="center"
       android:text="@string/result_label"
       android:textSize="12sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/reservationTime_label"
        android:textSize="12sp" />
	<TimePicker
        android:id="@+id/cinReservationTime_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
	<Button
       android:id="@+id/submit_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/submit_label" />
    <Button
       android:id="@+id/back_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/back_label" />
</LinearLayout>