<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dip" >
    <Button
       android:id="@+id/restaurants_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurants_label" />
    <Button
       android:id="@+id/reservations_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/reservations_label" />
    <Button
       android:id="@+id/home_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/home_label" />
    

</LinearLayout>